fixup - link libcommon with argobots lib

--- a/common/src/Makefile.am
+++ b/common/src/Makefile.am
@@ -63,19 +63,16 @@ libunifyfs_common_la_SOURCES = $(BASE_SRCS) $(OPT_SRCS)
 
 libunifyfs_common_la_CPPFLAGS = \
   $(OPT_FLAGS) \
-  $(MERCURY_CFLAGS) \
-  $(ARGOBOTS_CFLAGS) \
   $(MARGO_CFLAGS)
 
 libunifyfs_common_la_CPPFLAGS += -DSYSCONFDIR="$(sysconfdir)"
 
 libunifyfs_common_la_LDFLAGS = \
-  $(ARGOBOTS_LDFLAGS) \
   -version-info $(LIBUNIFYFS_LT_VERSION)
 
 libunifyfs_common_la_LIBADD = \
   $(OPT_LIBS) \
-  $(ARGOBOTS_LIBS) \
+  $(MARGO_LIBS) \
   -lm -lrt -lcrypto -lpthread
 
 AM_CFLAGS = -Wall -Werror -Wno-strict-aliasing
