remove undefined CFLAGS for mercury and argobots

--- a/server/src/Makefile.am
+++ b/server/src/Makefile.am
@@ -84,8 +84,6 @@ AM_CPPFLAGS = \
 
 AM_CFLAGS = -Wall -Werror \
   $(OPT_C_FLAGS) \
-  $(MARGO_CFLAGS) \
-  $(MERCURY_CFLAGS) \
-  $(ARGOBOTS_CFLAGS)
+  $(MARGO_CFLAGS)
 
 CLEANFILES = $(bin_PROGRAMS)
